syntax = "proto3";

package techcubing.wcif;

option java_package = "com.techcubing.proto.wcif";
option java_multiple_files = true;

import "src/main/java/com/techcubing/proto/options.proto";
import "src/main/java/com/techcubing/proto/wcif/event.proto";
import "src/main/java/com/techcubing/proto/wcif/person.proto";

message WcifCompetition {
  option (techcubing.mysql_table_name) = "Competition";

  // Omitted: formatVersion

  string id = 1 [(techcubing.primary_key) = true];
  string name = 2;
  string short_name = 3;

  repeated WcifPerson persons = 4;
  repeated string person_ids = 5 [
    (techcubing.id_for) = "persons",
    (techcubing.message_type) = "techcubing.wcif.WcifPerson"
  ];

  repeated WcifEvent events = 6;
  repeated string event_ids = 7 [
    (techcubing.id_for) = "events",
    (techcubing.message_type) = "techcubing.wcif.WcifEvent"
  ];

  // Omitted: schedule
}
